# spectre

./: annotated.html  classes.html  files.html  hierarchy.html
cmake/: SetupCharmAlgorithm.py
doc_coverage/: index-sort-l.html  index.html
doc_coverage/ApparentHorizons/: ChangeCenterOfStrahlkorper.hpp.gcov.html  (+12 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_3.js  all_4.js  all_5.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_19.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+1 more)
src/Evolution/Systems/NewtonianEuler/: CMakeLists.txt  Characteristics.cpp  FixConsMeansToAtmosphere.cpp  FixConsMeansToAtmosphere.hpp  FixToAtmosphere.cpp  FixToAtmosphere.hpp  PostLimiterFlattening.cpp  PostLimiterFlattening.hpp  PostLimiterPpFlux.cpp  PostLimiterPpFlux.hpp  SoundSpeedSquared.cpp  Tags.hpp  TagsDeclarations.hpp
src/Evolution/Systems/NewtonianEuler/Limiters/: CMakeLists.txt  CharacteristicHelpers.cpp  CharacteristicHelpers.hpp  Flattener.hpp  Helpers.cpp  Helpers.hpp  KxrcfTci.hpp  Minmod.cpp  Minmod.hpp  SimpleWeno.hpp  Weno.cpp  Weno.hpp  WenoType.cpp  WenoType.hpp
src/Evolution/Systems/NewtonianEuler/NumericalFluxes/: CMakeLists.txt  MaxNormalFluxes.hpp  PositivityPreservingLaxFriedrichs.cpp  PositivityPreservingLaxFriedrichs.hpp
(+1709 files in other folders)
